<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="64sp"
        android:text="@string/sensor_light_test"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="32sp"
        android:text="@string/skip"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_sensor_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sensor_light_value"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/tv_sensor_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sensor_light"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:text="@string/sensor_temperature_value"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/tv_sensor_humiture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sensor_temperature"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:text="@string/sensor_humiture_value"
        android:textSize="32sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/step_3"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/tv_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="300sp"
        android:textColor="@color/countdown"
        tools:text="1"/>

</RelativeLayout>