<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/tv_ble_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="64sp"
        android:text="@string/ble_test"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="32sp"
        android:text="@string/skip"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_ble_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ble_test"
        android:layout_marginTop="50dp"
        android:layout_marginStart="300dp"
        android:text="@string/ble_title"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_ble"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:layout_below="@+id/tv_ble_title"
        android:layout_marginStart="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/step_5"
        android:textSize="32sp"/>

</RelativeLayout>