<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_speaker_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="64sp"
        android:text="@string/speaker_test"/>

    <TextView
        android:id="@+id/tv_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/speaker_left_test"
        android:textSize="48sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_main_text"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:text="@string/pass_tip"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_detail_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_main_text"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:text="@string/speaker_tip2"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_play_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_detail_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textSize="32sp"
        tools:text="playing"/>

    <TextView
        android:id="@+id/tv_volume_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_play_state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="32sp"
        tools:text="双声道"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/step_6"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/tv_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="300sp"
        android:textColor="@color/countdown"
        tools:text="1"/>

</RelativeLayout>