<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_screen_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_color"
        android:layout_width="@dimen/root_view_width"
        android:layout_height="@dimen/root_view_height"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/layout_screen_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textSize="64sp"
            android:text="@string/screen_test"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textSize="32sp"
            android:text="@string/skip"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_screen_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/screen_tips"
            android:textSize="48sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/step_2"
            android:textSize="32sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="300sp"
        android:textColor="@color/red"
        android:visibility="gone"/>

</RelativeLayout>